Fix input spacing

--- a/uw-frame-components/css/buckyless/search.less
+++ b/uw-frame-components/css/buckyless/search.less
@@ -37,7 +37,6 @@ search {
         display: inline-block;
         width: 80%;
         font-size: 16px;
-        top: 1px;
         position: relative;
       }
       &.md-input-focused {
